# intent-trader

./: .coverage 2  .coverage 3  .gitignore  .pre-commit-config.yaml  AI_QUICKSTART.md  ARCHITECTURE.md  IAA-architecture-best-practices.md  INSTALL.md  LICENSE  Makefile  PROGRESS.md  README.md  REFACTORING_SUMMARY.md  TODO-BACKLOG.md  TODO.md  ai-assistant-instructions.md  changelog.md  claude-instructions.md  current-status.md  dev-requirements.txt  enhanced_handlers.py  intent-trader-iaa-requirements-and-language.md  intent-trader-iaa-requirements-and-language.md.md  intent-trader-journal.py  intent-trader.code-workspace  intent_trader-claude4opus.py  intent_trader-oia-4.1.py  intent_trader.py  intent_trader_app_spec.md  intent_trader_minimal.py  intent_trader_minimal2.py  intent_trader_spec_v1.md  intent_trader_v060_final_plan.md  intent_trader_v2.py  multi-agent-dev-sop.md  multi_agent_dev_sop.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-full.txt  (+5 more)
.github/workflows/: security-scan.yml
actions/: analyze_transcript.py  clean_transcript.py  generate_plan.py
agents/: __init__.py  analyst_agent.py  coach_agent.py  conviction_classifier_agent.py  execute_agent.py  focus_agent.py  manage_agent.py  market_data_agent.py  optimize_agent.py  order_agent.py  plan_agent.py  planner_agent.py  position_agent.py  review_agent.py
analysis/: __init__.py  performance_analyzer.py  performance_visualizer.py
brokers/: __init__.py  base.py  test_broker.py
config/: config.yaml
core/: __init__.py  action_dispatcher.py  agent_registry.py  conversation_manager.py  intent_parser.py
data/: __init__.py  market_data_provider.py  models.py  schemas.py  storage.py
data/storage/: history.json  positions.json
docs/: IAA-architecture-best-practices.md  README.md  developer-rules.md  how-to-design-iaa-requirements.md  iaa-design-guide.md  iaa_template.py  requirements-and-language.md
docs/api-reference/: README.md
docs/architecture/: IAA-architecture-guide.md  iaa-refactor-plan.md  multi_agent_dev_sop.md
docs/developer-guides/: contributing.md
docs/user-guides/: agent-workflow.md  getting-started.md
execution/: __init__.py  order_manager.py
logs/: 2025-05-29-coaching.md  YYYY-MM-DD-interaction-log.json
prompts/: analyze_dp.md  clean_dp_transcript.md  generate_plan.md
risk/: __init__.py  risk_manager.py
scripts/: run_first_test.py  run_trading_session.py
src/: __init__.py  iaa_core.py  position_manager.py
src/analysis/: performance_visualizer.py
tests/: conftest.py  test_action_dispatcher.py  test_agent_registry.py  test_basic_flow.py  test_config.py  test_database.py  test_intent_parser.py  test_logging.py  test_market_data.py  test_optimize_agent.py  test_order_manager.py  test_performance_analyzer.py  test_performance_visualizer.py  test_risk_manager.py
wip/: dp_conviction_phrases.csv  dp_methodology.md  eod-analysis-template.md  mancini_methodology.md
(+14 files in other folders)
